@@ -1,4 +1,4 @@
-#   GNUmakefile: main makefile for GNUstep GUI Demo Suite
+#   GNUmakefile
 #
 #   Copyright (C) 1999 Free Software Foundation, Inc.
 #
@@ -25,42 +25,17 @@ include $(GNUSTEP_MAKEFILES)/common.make
 OBJCFLAGS += -Wall
 
 #
-# Each test is a bundle subproject, in its own dir
+# We are creating a bundle
 #
-SUBPROJECTS = \
-  Composite-test \
-  GSHbox-test \
-  KeyboardInput-test \
-  NSBox-test \
-  NSColorList-test \
-  NSColorWell-test \
-  NSForm-test \
-  NSSavePanel-test \
-  NSScrollView-test \
-  NSSlider-test \
-  NSSplitView-test \
-  StringDrawing-test
-
-#
-# MAIN APP
-#
-APP_NAME = GSTest
-
-GSTest_HEADERS = \
-        testList.h \
-        testProtocol.h 
-
-GSTest_OBJC_FILES = \
-        main.m 
+BUNDLE_NAME = Composite-test
+Composite-test_OBJC_FILES = Composite-test.m MyView.m
+Composite-test_PRINCIPAL_CLASS = Composite
 
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
 
-include $(GNUSTEP_MAKEFILES)/aggregate.make
-include $(GNUSTEP_MAKEFILES)/application.make
 include $(GNUSTEP_MAKEFILES)/bundle.make
 
 -include GNUmakefile.postamble
-
 
